--- a/FacCheck/templates/homepage.html
+++ b/FacCheck/templates/homepage.html
@@ -1,5 +1,240 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<center><h1>Hello World!</h1></center>
+	<div class="row container">
+		<div class="col s12">
+			<ul class="tabs">
+				<li class="tab col s4"><a class="active" href="#test1">Unattended</a></li>
+				<li class="tab col s4"><a href="#test2">In Progress</a></li>
+				<li class="tab col s4"><a href="#test4">Done</a></li>
+			</ul>
+		</div>
+		<div id="test1" class="col s12">
+			{% for report1, report2 in unattended %}
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report1.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report1.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report1.report_title }}
+										{% if report1.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report1.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report1.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report1.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report1.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report1.description }}</p>
+						</div>
+					</div>
+				</div>
+
+			{% if report2 %}
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report2.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report2.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report2.report_title }}
+										{% if report2.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report2.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report2.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report2.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report2.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report2.description }}</p>
+						</div>
+					</div>
+				</div>
+			{% endif %}
+			</div>
+			{% endfor %}
+		</div>
+		<div id="test2" class="col s12">
+			{% for report1, report2 in in_progress %}
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report1.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report1.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report1.report_title }}
+										{% if report1.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report1.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report1.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report1.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report1.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report1.description }}</p>
+						</div>
+					</div>
+				</div>
+
+			{% if report2 %}
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report2.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report2.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report2.report_title }}
+										{% if report2.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report2.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report2.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report2.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report2.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report2.description }}</p>
+						</div>
+					</div>
+				</div>
+			{% endif %}
+			</div>
+			{% endfor %}
+		</div>
+		<div id="test4" class="col s12">
+			{% for report1, report2 in done %}
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report1.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report1.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report1.report_title }}
+										{% if report1.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report1.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report1.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report1.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report1.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report1.description }}</p>
+						</div>
+					</div>
+				</div>
+
+			{% if report2 %}
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="{{ report2.reportpic_url }}">
+							<span class="card-title">
+								<div class="row valign-wrapper">
+									<div class="col s2">
+							        	<img src="{{ report2.owner.profile.avatar_url }}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+							        </div>
+							        <div class="col s10">
+										{{ report2.report_title }}
+										{% if report2.report_type == '0' %}
+											<h6 class="grey-text text-lighten-2">IT Equipments</h6>
+										{% elif report2.report_type == '1' %}
+											<h6 class="grey-text text-lighten-2">Non-IT Equipments</h6>
+										{% elif report2.report_type == '2' %}
+											<h6 class="grey-text text-lighten-2">Furnitures and Fixtures</h6>
+										{% elif report2.report_type == '3' %}
+											<h6 class="grey-text text-lighten-2">Aircons</h6>
+										{% elif report2.report_type == '4' %}
+											<h6 class="grey-text text-lighten-2">Lab Equipment</h6>
+										{% endif %}
+									</div>
+								</div>
+							</span>
+							<a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+						</div>
+						<div class="card-content">
+							<p>{{ report2.description }}</p>
+						</div>
+					</div>
+				</div>
+			{% endif %}
+			</div>
+			{% endfor %}
+		</div>
+  </div>
+{% endblock %}
+
+{% block js %}
+	<script type="text/javascript">
+		$(document).ready(function(){
+    		$('ul.tabs').tabs('select_tab', 'tab_id');
+  		});
+	</script>
 {% endblock %}
