--- a/FacCheck/templates/navbar.html
+++ b/FacCheck/templates/navbar.html
@@ -1,26 +1,39 @@
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper">
+            <div class="container"><a href="#" class="brand-logo">FacCheck</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">view_headline</i></a>
             <ul class="right hide-on-med-and-down">
                 {% if request.user.is_authenticated %}
-                    <li><a class="waves-effect" href="#">Home</a></li>
-                    <li><a class="waves-effect" href="#">Report Equipment</a></li>
+                    <li><a class="waves-effect" href="{% url 'home' %}">Home</a></li>
+                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Profile</a></li>
+                    <li><a class="waves-effect" href="{% url 'report' %}">Report Equipment</a></li>
                     <li><a class="waves-effect" href="{% url 'signout' %}">Logout</a></li>
                 {% else %}
                     <li><a class="waves-effect" href="{% url 'signin' %}">Login</a></li>
+                    <li><a class="waves-effect" href="{% url 'signup' %}">Sign Up</a></li>
                 {% endif %}
             </ul>
+            </div>
         </div>
     </nav>
+    {% if request.user.is_authenticated %}
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="#">View</a></li>
+        <li><a href="{% url 'edit' request.user.username %}">Edit</a></li>
+    </ul>
+    {% endif %}
 </div>
 <ul class="side-nav" id="mobile-demo">
     {% if request.user.is_authenticated %}
         <li><center>MENU</center></li>
-        <li><a class="waves-effect" href="#"><i class="material-icons">assessment</i> Home</a></li>
-        <li><a class="waves-effect" href="#"><i class="material-icons">forum</i> Report Equipment</a></li>
+        <li><a class="waves-effect" href="{% url 'home' %}"><i class="material-icons">assessment</i> Home</a></li>
+        <li><a class="waves-effect" href="#"><i class="material-icons">perm_identity</i> View Profile</a></li>
+        <li><a class="waves-effect" href="{% url 'edit' request.user.username %}"><i class="material-icons">info</i> Edit Profile</a></li>
+        <li><a class="waves-effect" href="{% url 'report' %}"><i class="material-icons">forum</i> Report Equipment</a></li>
         <li><a class="waves-effect" href="{% url 'signout' %}"><i class="material-icons">lock</i> Logout</a></li>
     {% else %}
         <li><a class="waves-effect" href="{% url 'signin' %}"><i class="material-icons">lock</i> Login</a></li>
+        <li><a class="waves-effect" href="{% url 'signup' %}"><i class="material-icons">lock</i> Sign Up</a></li>
     {% endif %}
 </ul>
