--- a/Profile/static/css/login.css
+++ b/Profile/static/css/login.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:300);*/
 
 .login-page {
   width: 360px;
@@ -16,7 +16,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  /*font-family: "Roboto", sans-serif;*/
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -27,10 +27,10 @@
   font-size: 14px;
 }
 .form button {
-  font-family: "Roboto", sans-serif;
+  /*font-family: "Roboto", sans-serif;*/
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #bf2a39;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -41,7 +41,7 @@
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #fd6565 ;
 }
 .form .message {
   margin: 15px 0 0;
@@ -49,52 +49,52 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #bf2a39;
   text-decoration: none;
 }
 .form .register-form {
   /*display: none;*/
 }
-.container {
+.container1 {
   position: relative;
   z-index: 1;
   max-width: 300px;
   margin: 0 auto;
 }
-.container:before, .container:after {
+.container1:before, .container1:after {
   content: "";
   display: block;
   clear: both;
 }
-.container .info {
+.container1 .info {
   margin: 50px auto;
   text-align: center;
 }
-.container .info h1 {
+.container1 .info h1 {
   margin: 0 0 15px;
   padding: 0;
   font-size: 36px;
   font-weight: 300;
   color: #1a1a1a;
 }
-.container .info span {
+.container1 .info span {
   color: #4d4d4d;
   font-size: 12px;
 }
-.container .info span a {
+.container1 .info span a {
   color: #000000;
   text-decoration: none;
 }
-.container .info span .fa {
+.container1 .info span .fa {
   color: #EF3B3A;
 }
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+  /*background: #76b852;*/  /*fallback for old browsers */
+  /*background: -webkit-linear-gradient(right, #76b852, #8DC26F);
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
+  background: linear-gradient(to left, #76b852, #8DC26F);*/
+  /*font-family: "Roboto", sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
