Final for presentation

--- a/FacCheck/static/css/materialize.css
+++ b/FacCheck/static/css/materialize.css
@@ -4208,6 +4208,12 @@ nav.nav-extended .nav-content {
   line-height: normal;
 }
 
+.brand-logo img {
+    padding-top: 8px;
+    padding-bottom: 8px;  
+    height: 64px;
+}
+
 nav a {
   color: #fff;
 }
