--- a/FacCheck/templates/base.html
+++ b/FacCheck/templates/base.html
@@ -6,6 +6,8 @@
                 FacCheck
             {% endblock%}
         </title>
+        <link rel="shortcut icon" href="../static/img/favicon_final.png" type="image/x-icon">
+		<link rel="icon" href="/favicon_final.png" type="image/x-icon">
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="{% static 'css/materialize.css' %}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
